@@ -1,3 +1,7 @@
+2006-10-31  Kostas Nakos  <knakos@gmail.com>
+* util.c: Make sure user does not updir from the root in WinCE
+
+
 2006-10-30  Kostas Nakos  <knakos@gmail.com>
 * wince/port/*, ui_basic.c, DOC/INSTALL.wince: added support for QVGA landscape 
   smartphones, added the virtual keyboard (kb_ui) and updated documentation.
